--- a/Diseño/TransferObject/.project
+++ b/Diseño/TransferObject/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Gestionator</name>
+	<name>TransferObject</name>
 	<comment></comment>
 	<projects>
 	</projects>
