--- a/Diseño/GestionatorDefinitivo(Fernando y Ernesto)/.project
+++ b/Diseño/GestionatorDefinitivo(Fernando y Ernesto)/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>GestionatorDefinitivo</name>
+	<name>GestionatorDefinitivo(Fernando y Ernesto)</name>
 	<comment></comment>
 	<projects>
 	</projects>
